--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsxgraph/0.99.3/jsxgraphcore.js"></script>
 <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
 <style>
-	.boxed {
-		border: 1px solid #000000;
-	}
+	.JXGtext { font-family: MathJax_Main, sans-serif;}
 </style>
 <div class="container tex2jax_ignore" id="reactContent">
 </div>
