system loader fix

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 </div>
 <script src="jspm_packages/system.js"></script>
 <script src="config.js"></script>
-<script src="bin/program.js"></script>
 <script>
-	System.import("main");
+	System.import("bin/main");
 </script>
 </div>
