update readme, build index-dist

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <style>
 	.JXGtext { font-family: MathJax_Main, sans-serif;}
 </style>
-<div class="container tex2jax_ignore" id="reactContent">
-</div>
+<div class="container tex2jax_ignore" id="reactContent"></div>
 <script src="jspm_packages/system.js"></script>
 <script src="config.js"></script>
 <script>
