--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Convolution demo</title>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsxgraph/0.99.3/jsxgraphcore.js"></script>
-<script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jsxgraph/0.99.3/jsxgraphcore.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML"></script>
 <style>
 	.JXGtext { font-family: MathJax_Main, sans-serif; cursor: default;
 		-webkit-touch-callout: none;-ms-user-select: none;user-select: none;
@@ -11,8 +11,5 @@
 	}
 </style>
 <div class="container tex2jax_ignore" id="reactContent"></div>
-<script src="jspm_packages/system.js"></script>
-<script src="config.js"></script>
-<script>
-	System.import("bin/main");
-</script>
+<script src="src/main.tsx"></script>
+
