--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!doctype html>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Convolution demo</title>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsxgraph/0.99.3/jsxgraphcore.js"></script>
-<script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
-<style>
-	.JXGtext { font-family: MathJax_Main, sans-serif; cursor: default;
-		-webkit-touch-callout: none;-ms-user-select: none;user-select: none;
-		-webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none;
-	}
-</style>
-<div class="container tex2jax_ignore" id="reactContent"></div>
-<script src="bundle.js"></script>
+<!doctype html><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Convolution demo</title><script src="https://cdnjs.cloudflare.com/ajax/libs/jsxgraph/0.99.3/jsxgraphcore.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML"></script><style>.JXGtext{font-family:MathJax_Main,sans-serif;cursor:default;-webkit-touch-callout:none;-ms-user-select:none;user-select:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none}</style><link rel="stylesheet" href="main.cd4cdaee.css"><div class="container tex2jax_ignore" id="reactContent"></div><script src="main.d43b24cb.js"></script>
